# s2client-api

src/: CMakeLists.txt
src/sc2api/: sc2_client.cc
tests/: CMakeLists.txt
